trying to fix something on mobile

--- a/static/base.css
+++ b/static/base.css
@@ -23,6 +23,7 @@
 }
 
 body {
+    width: 100vw;
     background-color: var(--bg-fill);
     color: var(--text-fill);
     font-family: var(--font-body);
